<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <!-- Title -->

    <TextView
        android:id="@+id/TitleLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_string"
        android:textAppearance="?android:attr/textAppearanceLarge" >
    </TextView>

    <EditText
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/TitleLabel"
        android:layout_marginTop="14dp"
        android:ems="10"
        android:hint="@string/enter_title_string"
        android:inputType="textShortMessage">

        <requestFocus />
    </EditText>

    <!-- Location -->
    <TextView
        android:id="@+id/LocationLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/location_string"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/title"/>

    <EditText
        android:id="@+id/enteredLocation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/enter_location_string"
        android:inputType="textShortMessage"
        android:layout_below="@+id/LocationLabel"
        android:layout_alignEnd="@+id/time">

        <requestFocus />
    </EditText>


    <!-- Description -->

    <TextView
        android:id="@+id/DescriptionLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/description_string"
        android:layout_alignParentLeft="true"

        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_below="@+id/enteredLocation"
        android:layout_marginTop="10dp" />

    <EditText
        android:id="@+id/description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/DescriptionLabel"
        android:layout_marginTop="14dp"
        android:ems="10"
        android:hint="@string/enter_description_string"
        android:inputType="textMultiLine"/>
    <!-- Time and Date -->

    <TextView
        android:id="@+id/time_and_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/description"
        android:layout_marginTop="10dp"
        android:text="@string/time_and_date_string"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/time_and_date"
        android:layout_marginTop="12dp"
        android:text="@string/no_date_set_string" />

    <TextView
        android:id="@+id/time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/time_and_date"
        android:text="@string/no_time_set_string" />

    <Button
        android:id="@+id/date_picker_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/date"
        android:text="@string/choose_date_string"
        android:textColor="#ffffff"
        android:background="@color/colorPrimary"/>

    <Button
        android:id="@+id/time_picker_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@id/date_picker_button"
        android:layout_below="@id/time"
        android:text="@string/choose_time_string"
        android:textColor="#ffffff"
        android:background="@color/colorPrimary"/>

    <!-- Buttons -->

    <Button
        android:id="@+id/cancelButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="25dp"
        android:text="@string/cancel_string"
        android:textColor="#ffffff"
        android:background="@color/colorPrimary"/>

    <Button
        android:id="@+id/resetButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/reset_string"
        android:textColor="#ffffff"
        android:background="@color/colorPrimary"/>

    <Button
        android:id="@+id/submitButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:text="@string/submit_string"
        android:textColor="#ffffff"
        android:background="@color/colorPrimary"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Upload"
        android:id="@+id/uploadEventImage"
        android:layout_above="@+id/cancelButton"
        android:layout_alignStart="@+id/time_picker_button"
        android:layout_alignEnd="@+id/submitButton"
        android:textColor="#ffffff"
        android:background="@color/colorPrimary"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Upload an Event Image"
        android:id="@+id/eventImageUpload"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_alignTop="@+id/uploadEventImage"
        android:layout_alignStart="@+id/DescriptionLabel" />



</RelativeLayout>